[files]
packages =
    genpasswd

[data_files]
'data' = ['*.sqlite3']

[entry_points]
console_scripts =
    genpasswd = genpasswd.genpasswd:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=1

[metadata]
name = genpasswd
summary = A python package that generates memorable passwords
description-file =
    README.rst
author = Masayuki Igawa
author-email = masayuki@igawa.io
home-page = http://github.com/masayukig/genpasswd
license = Apache License 2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control
